@@ -59,9 +59,10 @@ import br.gov.jfrj.siga.dp.DpLotacao;
 import br.gov.jfrj.siga.dp.DpPessoa;
 import br.gov.jfrj.siga.dp.dao.CpDao;
 import br.gov.jfrj.siga.dp.dao.DpPessoaDaoFiltro;
+import br.gov.jfrj.siga.gi.integracao.IntegracaoLdapViaWebService;
+import br.gov.jfrj.siga.gi.service.GiService;
 
 public class CpBL {
-
 	CpCompetenciaBL comp;
 
 	public CpCompetenciaBL getComp() {
@@ -218,10 +219,11 @@ public class CpBL {
 		}
 	}
 
-	public CpConfiguracao configurarAcesso(CpPerfil perfil, CpOrgaoUsuario orgao,
-			DpLotacao lotacao, DpPessoa pes, CpServico servico,
-			CpSituacaoConfiguracao situacao, CpTipoConfiguracao tpConf,
-			CpIdentidade identidadeCadastrante) throws Exception {
+	public CpConfiguracao configurarAcesso(CpPerfil perfil,
+			CpOrgaoUsuario orgao, DpLotacao lotacao, DpPessoa pes,
+			CpServico servico, CpSituacaoConfiguracao situacao,
+			CpTipoConfiguracao tpConf, CpIdentidade identidadeCadastrante)
+			throws Exception {
 		Date dt = dao().consultarDataEHoraDoServidor();
 
 		CpConfiguracao confOld = null;
@@ -256,40 +258,47 @@ public class CpBL {
 			dao().gravarComHistorico(confOld, identidadeCadastrante);
 		}
 		dao().gravarComHistorico(conf, identidadeCadastrante);
-		
+
 		comp.getConfiguracaoBL().limparCacheSeNecessario();
 
 		return conf;
 	}
-	
+
 	public String alterarSenha(String cpf, String email, String matricula)
 			throws AplicacaoException {
-		
+
 		String resultado = "";
 		try {
-			if( Pattern.matches( "\\d+", cpf) && cpf.length() == 11) {
+			if (Pattern.matches("\\d+", cpf) && cpf.length() == 11) {
 				List<CpIdentidade> lista = null;
-				
-				if(matricula != null) {
-					final long longmatricula = MatriculaUtils.getParteNumericaDaMatricula(matricula);
+
+				if (matricula != null) {
+					final long longmatricula = MatriculaUtils
+							.getParteNumericaDaMatricula(matricula);
 					DpPessoa pessoa = dao().consultarPorCpfMatricula(
 							Long.parseLong(cpf), longmatricula);
 					lista = dao().consultaIdentidades(pessoa);
 				}
-				
-				if(email != null) {
+
+				if (email != null) {
 					lista = dao().consultaIdentidadesPorCpfEmail(cpf, email);
 				}
-				
-				if(!lista.isEmpty()) {
+
+				if (!lista.isEmpty()) {
 					lista = dao().consultaIdentidadesPorCpf(cpf);
 				}
-				if(!lista.isEmpty()) {
+				if (!lista.isEmpty()) {
 					String[] senhaGerada = new String[1];
 					senhaGerada[0] = GeraMessageDigest.geraSenha();
 					for (CpIdentidade cpIdentidade : lista) {
-						Cp.getInstance().getBL().alterarSenhaDeIdentidade(cpIdentidade.getNmLoginIdentidade(),
-								StringUtils.leftPad(cpIdentidade.getDpPessoa().getCpfPessoa().toString(), 11, "0"), null,senhaGerada);
+						Cp.getInstance()
+								.getBL()
+								.alterarSenhaDeIdentidade(
+										cpIdentidade.getNmLoginIdentidade(),
+										StringUtils.leftPad(cpIdentidade
+												.getDpPessoa().getCpfPessoa()
+												.toString(), 11, "0"), null,
+										senhaGerada);
 					}
 					resultado = "OK";
 				} else {
@@ -321,14 +330,16 @@ public class CpBL {
 	public CpIdentidade alterarSenhaDeIdentidade(String matricula, String cpf,
 			CpIdentidade idCadastrante, String[] senhaGerada)
 			throws AplicacaoException {
-		
+
 		Long longCpf = CPFUtils.getLongValueValidaSimples(cpf);
 		final List<DpPessoa> listaPessoas = dao().listarPorCpf(longCpf);
-		if(listaPessoas.isEmpty()) {
-			throw new AplicacaoException("O CPF informado está incorreto, tente novamente!");
+		if (listaPessoas.isEmpty()) {
+			throw new AplicacaoException(
+					"O CPF informado está incorreto, tente novamente!");
 		}
-		
-		final long longmatricula = MatriculaUtils.getParteNumericaDaMatricula(matricula);
+
+		final long longmatricula = MatriculaUtils
+				.getParteNumericaDaMatricula(matricula);
 		final DpPessoa pessoa = dao().consultarPorCpfMatricula(
 				Long.parseLong(cpf), longmatricula);
 
@@ -365,52 +376,58 @@ public class CpBL {
 					dao().commitTransacao();
 
 					if (SigaMessages.isSigaSP()) {
-						String[] destinanarios = { pessoa.getEmailPessoaAtual()};
+						String[] destinanarios = { pessoa.getEmailPessoaAtual() };
 						Correio.enviar(
-							SigaBaseProperties.getString("servidor.smtp.usuario.remetente"),
-							destinanarios,
-							"Esqueci Minha Senha",
-							"",
-							"<table>"
-							+ "<tbody>"
-							+ "<tr>"
-							+ "<td style='height: 80px; background-color: #f6f5f6; padding: 10px 20px;'>"
-							+ "<img style='padding: 10px 0px; text-align: center;' src='http://www.documentos.spsempapel.sp.gov.br/siga/imagens/logo-sem-papel-cor.png' "
-							+ "alt='SP Sem Papel' width='108' height='50' /></td>"
-							+ "</tr>"
-							+ "<tr>"
-							+ "<td style='background-color: #bbb; padding: 0 20px;'>"
-							+ "<h3 style='height: 20px;'>Governo do Estado de S&atilde;o Paulo</h3>"
-							+ "</td>"
-							+ "</tr>"
-							+ "<tr style='height: 310px;'>"
-							+ "<td style='height: 310px; padding: 10px 20px;'>"
-							+ "<div>"
-							+ "<h4><span style='color: #808080;'>Prezado Servidor(a) "
-							+ "<strong>" + idNova.getDpPessoa().getNomePessoa() + "</strong>"
-							+ " do(a) "
-							+ "<strong>" + idNova.getDpPessoa().getOrgaoUsuario().getDescricao() + "</strong>" 
-							+",</span></h4>"
-							+ "<p><span style='color: #808080;'>Voc&ecirc; est&aacute; recebendo sua nova senha para acesso "
-							+ "ao Portal SP Sem Papel.</span></p>"
-							+ "<p><span style='color: #808080;'><strong>"
-							+ "<p><span style='color: #808080;'>Sua matr&iacute;cula &eacute;:&nbsp;&nbsp;<strong>"
-							+ idNova.getDpPessoa().getSigla()
-							+ "</strong></span></p>"
-							+ "<p><span style='color: #808080;'>Sua senha &eacute;:&nbsp;&nbsp;<strong>"
-							+ novaSenha
-							+ "</strong></span></p>"
-							+ "</div>"
-							+ "</td>"
-							+ "</tr>"
-							+ "<tr>"
-							+ "<td style='height: 18px; padding: 0 20px; background-color: #eaecee;'>"
-							+ "<p><span style='color: #aaa;'><strong>Aten&ccedil;&atilde;o:</strong> esta &eacute; uma mensagem autom&aacute;tica. Por favor n&atilde;o responda&nbsp;</span></p>"
-							+ "</td>"
-							+ "</tr>"
-							+ "</tbody>"
-							+ "</table>"
-							);
+								SigaBaseProperties
+										.getString("servidor.smtp.usuario.remetente"),
+								destinanarios,
+								"Esqueci Minha Senha",
+								"",
+								"<table>"
+										+ "<tbody>"
+										+ "<tr>"
+										+ "<td style='height: 80px; background-color: #f6f5f6; padding: 10px 20px;'>"
+										+ "<img style='padding: 10px 0px; text-align: center;' src='http://www.documentos.spsempapel.sp.gov.br/siga/imagens/logo-sem-papel-cor.png' "
+										+ "alt='SP Sem Papel' width='108' height='50' /></td>"
+										+ "</tr>"
+										+ "<tr>"
+										+ "<td style='background-color: #bbb; padding: 0 20px;'>"
+										+ "<h3 style='height: 20px;'>Governo do Estado de S&atilde;o Paulo</h3>"
+										+ "</td>"
+										+ "</tr>"
+										+ "<tr style='height: 310px;'>"
+										+ "<td style='height: 310px; padding: 10px 20px;'>"
+										+ "<div>"
+										+ "<h4><span style='color: #808080;'>Prezado Servidor(a) "
+										+ "<strong>"
+										+ idNova.getDpPessoa().getNomePessoa()
+										+ "</strong>"
+										+ " do(a) "
+										+ "<strong>"
+										+ idNova.getDpPessoa()
+												.getOrgaoUsuario()
+												.getDescricao()
+										+ "</strong>"
+										+ ",</span></h4>"
+										+ "<p><span style='color: #808080;'>Voc&ecirc; est&aacute; recebendo sua nova senha para acesso "
+										+ "ao Portal SP Sem Papel.</span></p>"
+										+ "<p><span style='color: #808080;'><strong>"
+										+ "<p><span style='color: #808080;'>Sua matr&iacute;cula &eacute;:&nbsp;&nbsp;<strong>"
+										+ idNova.getDpPessoa().getSigla()
+										+ "</strong></span></p>"
+										+ "<p><span style='color: #808080;'>Sua senha &eacute;:&nbsp;&nbsp;<strong>"
+										+ novaSenha
+										+ "</strong></span></p>"
+										+ "</div>"
+										+ "</td>"
+										+ "</tr>"
+										+ "<tr>"
+										+ "<td style='height: 18px; padding: 0 20px; background-color: #eaecee;'>"
+										+ "<p><span style='color: #aaa;'><strong>Aten&ccedil;&atilde;o:</strong> esta &eacute; uma mensagem autom&aacute;tica. Por favor n&atilde;o responda&nbsp;</span></p>"
+										+ "</td>"
+										+ "</tr>"
+										+ "</tbody>"
+										+ "</table>");
 					} else {
 						Correio.enviar(
 								pessoa.getEmailPessoaAtual(),
@@ -454,17 +471,22 @@ public class CpBL {
 			CpIdentidade idCadastrante, final String senhaDefinida,
 			String[] senhaGerada, boolean marcarParaSinc)
 			throws AplicacaoException {
-
+		
 		Long longCpf = CPFUtils.getLongValueValidaSimples(cpf);
 		final List<DpPessoa> listaPessoas = dao().listarPorCpf(longCpf);
-		if(listaPessoas.isEmpty()) {
-			throw new AplicacaoException("O CPF informado está incorreto, tente novamente!");
+		if (listaPessoas.isEmpty()) {
+			throw new AplicacaoException(
+					"O CPF informado está incorreto, tente novamente!");
 		}
-		
-		final long longMatricula = MatriculaUtils.getParteNumericaDaMatricula(matricula);
+
+		final long longMatricula = MatriculaUtils
+				.getParteNumericaDaMatricula(matricula);
 
 		final DpPessoa pessoa = dao().consultarPorCpfMatricula(longCpf,
 				longMatricula);
+		
+		String siglaOrgaoMatricula = MatriculaUtils.getSiglaDoOrgaoDaMatricula(matricula);
+		boolean autenticaPeloBanco = buscarModoAutenticacao(siglaOrgaoMatricula).equals(GiService._MODO_AUTENTICACAO_BANCO);
 
 		if (pessoa != null && matricula.equals(pessoa.getSigla())) {
 			CpIdentidade id;
@@ -475,20 +497,24 @@ public class CpBL {
 			}
 			if (id == null) {
 				if (pessoa.getEmailPessoaAtual() != null) {
-					String novaSenha = null;
-					if (senhaDefinida != null && senhaDefinida.length() > 0) {
-						novaSenha = senhaDefinida;
-					} else {
-						novaSenha = GeraMessageDigest.geraSenha();
-					}
-
-					if (senhaGerada[0] != null) {
-						novaSenha = senhaGerada[0];
+					String novaSenha = "";
+					if(autenticaPeloBanco) {
+						if (senhaDefinida != null && senhaDefinida.length() > 0) {
+							novaSenha = senhaDefinida;
+						} else {
+							novaSenha = GeraMessageDigest.geraSenha();
+						}
+	
+						if (senhaGerada[0] != null) {
+							novaSenha = senhaGerada[0];
+						}
 					}
 					try {
 						CpIdentidade idNova = new CpIdentidade();
-						final String hashNova = GeraMessageDigest.executaHash(
-								novaSenha.getBytes(), "MD5");
+						String hashNova = "";
+						if(autenticaPeloBanco) {
+							hashNova = GeraMessageDigest.executaHash(novaSenha.getBytes(), "MD5");
+						}
 						idNova.setDscSenhaIdentidade(hashNova);
 						idNova.setNmLoginIdentidade(matricula);
 						idNova.setDpPessoa(pessoa);
@@ -502,69 +528,22 @@ public class CpBL {
 						dao().iniciarTransacao();
 						dao().gravarComHistorico(idNova, idCadastrante);
 						dao().commitTransacao();
-						
+
 						if (SigaMessages.isSigaSP()) {
-							String[] destinanarios = { pessoa.getEmailPessoaAtual()};
-							
+							String[] destinanarios = { pessoa
+									.getEmailPessoaAtual() };
+
 							Correio.enviar(
 								SigaBaseProperties.getString("servidor.smtp.usuario.remetente"),
 								destinanarios,
 								"Novo Usuário",
 								"",
-								"<table>"
-								+ "<tbody>"
-								+ "<tr>"
-								+ "<td style='height: 80px; background-color: #f6f5f6; padding: 10px 20px;'>"
-								+ "<img style='padding: 10px 0px; text-align: center;' src='http://www.documentos.spsempapel.sp.gov.br/siga/imagens/logo-sem-papel-cor.png' "
-								+ "alt='SP Sem Papel' width='108' height='50' /></td>"
-								+ "</tr>"
-								+ "<tr>"
-								+ "<td style='background-color: #bbb; padding: 0 20px;'>"
-								+ "<h3 style='height: 20px;'>Governo do Estado de S&atilde;o Paulo</h3>"
-								+ "</td>"
-								+ "</tr>"
-								+ "<tr style='height: 310px;'>"
-								+ "<td style='height: 310px; padding: 10px 20px;'>"
-								+ "<div>"
-								+ "<p><span style='color: #808080;'>Prezado Servidor(a) "
-								+ "<strong>" + idNova.getDpPessoa().getNomePessoa() + "</strong>"
-								+ " do(a) "
-								+ "<strong>" + idNova.getDpPessoa().getOrgaoUsuario().getDescricao() + "</strong>" 
-								+",</span></h4>"
-								+ "<p><span style='color: #808080;'>Voc&ecirc; est&aacute; recebendo sua matr&iacute;cula e senha para acesso "
-								+ "ao Portal SP Sem Papel, para acesso ao servi&ccedil;o Documentos Digitais.</span></p>"
-								+ "<p><span style='color: #808080;'>Ao usar o portal para cria&ccedil;&atilde;o de documentos, voc&ecirc; est&aacute; "
-								+ "produzindo documento nato-digital, confirme seus dados cadastrais, nome, cargo e unidade "
-								+ "antes de iniciar o uso e assinar documentos.</span></p>"
-								+ "<p><span style='color: #808080;'>Realize sua capacita&ccedil;&atilde;o no AVA e utilize o ambiente "
-								+ "de capacita&ccedil;&atilde;o para testes e treinamento.</span></p>"
-								+ "<p><span style='color: #808080;'>Sua matr&iacute;cula &eacute;:&nbsp;&nbsp;<strong>"
-								+ matricula
-								+ "</strong></span></p>"
-								+ "<p><span style='color: #808080;'>Sua senha &eacute;:&nbsp;&nbsp;<strong>"
-								+ novaSenha
-								+ "</strong></span></p>"
-								+ "</div>"
-								+ "</td>"
-								+ "</tr>"
-								+ "<tr>"
-								+ "<td style='height: 18px; padding: 0 20px; background-color: #eaecee;'>"
-								+ "<p><span style='color: #aaa;'><strong>Aten&ccedil;&atilde;o:</strong> esta &eacute; uma mensagem autom&aacute;tica. Por favor n&atilde;o responda&nbsp;</span></p>"
-								+ "</td>"
-								+ "</tr>"
-								+ "</tbody>"
-								+ "</table>"
-								);
+								textoEmailNovoUsuarioSP(idNova, matricula, novaSenha, autenticaPeloBanco));
 						} else {
 							Correio.enviar(
 								pessoa.getEmailPessoaAtual(),
 								"Novo Usuário",
-								"Seu login é: "
-								+ matricula
-								+ "\n e sua senha é "
-								+ novaSenha
-								+ "\n\n Atenção: esta é uma "
-								+ "mensagem automática. Por favor não responda ");
+								textoEmailNovoUsuario(matricula, novaSenha, autenticaPeloBanco));
 						}
 						dao().commitTransacao();
 						return idNova;
@@ -593,41 +572,134 @@ public class CpBL {
 		}
 
 	}
+	
+    private String textoEmailNovoUsuario(String matricula, String novaSenha, boolean autenticaPeloBanco) {
+    	StringBuffer retorno = new StringBuffer();
 
+    	retorno.append("Seu login é: ");
+		retorno.append(matricula);
+		retorno.append("\n e sua senha é ");
+		if(autenticaPeloBanco) {
+			retorno.append(novaSenha);
+		}	else {
+			retorno.append("a mesma usada para logon na rede (Windows).");
+		}
+		retorno.append("\n\n Atenção: esta é uma ");
+		retorno.append("mensagem automática. Por favor não responda ");
+		
+		return retorno.toString();
+	}
+
+	private String textoEmailNovoUsuarioSP(CpIdentidade identidade, String matricula, String novaSenha, boolean autenticaPeloBanco) {
+		StringBuffer retorno = new StringBuffer();
+
+		retorno.append("<table>");
+		retorno.append("<tbody>");
+		retorno.append("<tr>");
+		retorno.append("<td style='height: 80px; background-color: #f6f5f6; padding: 10px 20px;'>");
+		retorno.append("<img style='padding: 10px 0px; text-align: center;' src='http://www.documentos.spsempapel.sp.gov.br/siga/imagens/logo-sem-papel-cor.png' ");
+		retorno.append("alt='SP Sem Papel' width='108' height='50' /></td>");
+		retorno.append("</tr>");
+		retorno.append("<tr>");
+		retorno.append("<td style='background-color: #bbb; padding: 0 20px;'>");
+		retorno.append("<h3 style='height: 20px;'>Governo do Estado de S&atilde;o Paulo</h3>");
+		retorno.append("</td>");
+		retorno.append("</tr>");
+		retorno.append("<tr style='height: 310px;'>");
+		retorno.append("<td style='height: 310px; padding: 10px 20px;'>");
+		retorno.append("<div>");
+		retorno.append("<p><span style='color: #808080;'>Prezado Servidor(a) ");
+		retorno.append("<strong>" + identidade.getDpPessoa().getNomePessoa() + "</strong>");
+		retorno.append(" do(a) ");
+		retorno.append("<strong>" + identidade.getDpPessoa().getOrgaoUsuario().getDescricao() + "</strong>");
+		retorno.append(",</span></h4>");
+		retorno.append("<p><span style='color: #808080;'>Voc&ecirc; est&aacute; recebendo sua matr&iacute;cula e senha para acesso ");
+		retorno.append("ao Portal SP Sem Papel, para acesso ao servi&ccedil;o Documentos Digitais.</span></p>");
+		retorno.append("<p><span style='color: #808080;'>Ao usar o portal para cria&ccedil;&atilde;o de documentos, voc&ecirc; est&aacute; ");
+		retorno.append("produzindo documento nato-digital, confirme seus dados cadastrais, nome, cargo e unidade ");
+		retorno.append("antes de iniciar o uso e assinar documentos.</span></p>");
+		retorno.append("<p><span style='color: #808080;'>Realize sua capacita&ccedil;&atilde;o no AVA e utilize o ambiente ");
+		retorno.append("de capacita&ccedil;&atilde;o para testes e treinamento.</span></p>");
+		retorno.append("<p><span style='color: #808080;'>Sua matr&iacute;cula &eacute;:&nbsp;&nbsp;<strong>");
+		retorno.append(matricula);
+		retorno.append("</strong></span></p>");
+		if(autenticaPeloBanco) {
+			retorno.append("<p><span style='color: #808080;'>Sua senha &eacute;:&nbsp;&nbsp;<strong>");
+			retorno.append(novaSenha);
+			retorno.append("</strong></span></p>");
+		} else {
+	        retorno.append("<p><span style='color: #808080;'>");
+			retorno.append("Sua senha &eacute; a mesma usada para logon na rede (Windows).");
+			retorno.append("</span></p>");
+		}
+		retorno.append("</div>");
+		retorno.append("</td>");
+		retorno.append("</tr>");
+		retorno.append("<tr>");
+		retorno.append("<td style='height: 18px; padding: 0 20px; background-color: #eaecee;'>");
+		retorno.append("<p><span style='color: #aaa;'><strong>Aten&ccedil;&atilde;o:</strong> esta &eacute; uma mensagem autom&aacute;tica. Por favor n&atilde;o responda&nbsp;</span></p>");
+		retorno.append("</td>");
+		retorno.append("</tr>");
+		retorno.append("</tbody>");
+		retorno.append("</table>");		
+		return retorno.toString();
+	}
+
+	private String buscarModoAutenticacao(String orgao) {
+    	String retorno = GiService._MODO_AUTENTICACAO_DEFAULT;
+    	CpPropriedadeBL props = new CpPropriedadeBL();
+    	try {
+			String modo = props.getModoAutenticacao(orgao);
+			if(modo != null) 
+				retorno = modo;
+		} catch (Exception e) {
+		}
+    	return retorno;
+    }
+    
 	public CpIdentidade trocarSenhaDeIdentidade(String senhaAtual,
 			String senhaNova, String senhaConfirma, String nomeUsuario,
 			CpIdentidade idCadastrante) throws NoSuchAlgorithmException,
 			AplicacaoException {
-		if (senhaAtual == null || senhaAtual.trim().length() == 0) {
-			throw new AplicacaoException("Senha atual não confere");
-		}
-		final String hashAtual = GeraMessageDigest.executaHash(
-				senhaAtual.getBytes(), "MD5");
-
-		final CpIdentidade id = dao().consultaIdentidadeCadastrante(
-				nomeUsuario, true);
-		// se o usuário não existir
+		
+		// usuario existe?
+		final CpIdentidade id = dao().consultaIdentidadeCadastrante(nomeUsuario, true);
 		if (id == null)
 			throw new AplicacaoException("O usuário não está cadastrado.");
 
-		boolean podeTrocar = id.getDscSenhaIdentidade().equals(hashAtual);
+		boolean autenticaPeloBanco = buscarModoAutenticacao(id.getCpOrgaoUsuario().getSiglaOrgaoUsu()).equals(GiService._MODO_AUTENTICACAO_BANCO);
+		if(!autenticaPeloBanco)
+			throw new AplicacaoException("O usuário deve modificar sua senha usando a interface do Windows " + 
+										"(acionando as teclas Ctrl, Alt e Del / Delete, opção 'Alterar uma senha')" +
+										", ou entrando em contato com a Central de Atendimento.");
+		
+		// preencheu senha atual?
+		if (senhaAtual == null || senhaAtual.trim().length() == 0) {
+			throw new AplicacaoException("Senha atual não confere");
+		}
+		
+		boolean podeTrocar = false;
+		boolean podeTrocarSenhaAdm = false;
+		
+		podeTrocar = autenticarViaBanco(senhaAtual, id);
 
 		if (!podeTrocar) {
-			// tenta o modo administrador...
+			// tenta o modo administrador... Podendo autenticar o ADM pelo LDAP
 			String servico = "SIGA: Sistema Integrado de Gestão Administrativa;GI: Módulo de Gestão de Identidade;DEF_SENHA: Definir Senha";
 			try {
-				if (Cp.getInstance()
-						.getConf()
-						.podeUtilizarServicoPorConfiguracao(
-								idCadastrante.getDpPessoa(),
-								idCadastrante.getDpPessoa().getLotacao(),
-								servico)) {
-
-					if (hashAtual.equals(idCadastrante.getDscSenhaIdentidade())) {
-						podeTrocar = true;
+				boolean admTrocaSenha = Cp.getInstance().getConf().podeUtilizarServicoPorConfiguracao(
+																				idCadastrante.getDpPessoa(),
+																				idCadastrante.getDpPessoa().getLotacao(),
+																				servico);
+				if (admTrocaSenha) {
+					if(buscarModoAutenticacao(idCadastrante.getCpOrgaoUsuario().getSiglaOrgaoUsu()).equals(GiService._MODO_AUTENTICACAO_BANCO)) {
+						podeTrocarSenhaAdm = autenticarViaBanco(senhaAtual, idCadastrante);
 					} else {
-						throw new AplicacaoException("Senha atual não confere");
+						podeTrocarSenhaAdm = autenticarViaLdap(senhaAtual, idCadastrante);
 					}
+					
+					if(!podeTrocarSenhaAdm)
+						throw new AplicacaoException("Senha atual não confere");
 
 					try {
 						Correio.enviar(
@@ -661,7 +733,7 @@ public class CpBL {
 			}
 		}
 
-		if (podeTrocar && senhaNova.equals(senhaConfirma)) {
+		if ((podeTrocar || podeTrocarSenhaAdm) && senhaNova.equals(senhaConfirma)) {
 			try {
 				Date dt = dao().consultarDataEHoraDoServidor();
 				CpIdentidade idNova = new CpIdentidade();
@@ -672,11 +744,11 @@ public class CpBL {
 						senhaNova.getBytes(), "MD5");
 				idNova.setDscSenhaIdentidade(hashNova);
 
-//				BASE64Encoder encoderBase64 = new BASE64Encoder();
-//				String chave = encoderBase64.encode(id.getDpPessoa()
-//						.getIdInicial().toString().getBytes());
-//				String senhaCripto = encoderBase64.encode(Criptografia
-//						.criptografar(senhaNova, chave));
+				// BASE64Encoder encoderBase64 = new BASE64Encoder();
+				// String chave = encoderBase64.encode(id.getDpPessoa()
+				// .getIdInicial().toString().getBytes());
+				// String senhaCripto = encoderBase64.encode(Criptografia
+				// .criptografar(senhaNova, chave));
 				idNova.setDscSenhaIdentidadeCripto(null);
 				idNova.setDscSenhaIdentidadeCriptoSinc(null);
 
@@ -694,11 +766,11 @@ public class CpBL {
 					"Senha Atual não confere e/ou Senha nova diferente de confirmação");
 		}
 	}
-	
+
 	public CpIdentidade trocarSenhaDeIdentidadeGovSp(String senhaAtual,
 			String senhaNova, String senhaConfirma, String nomeUsuario,
-			CpIdentidade idCadastrante, List<CpIdentidade> listaIdentidades) throws NoSuchAlgorithmException,
-			AplicacaoException {
+			CpIdentidade idCadastrante, List<CpIdentidade> listaIdentidades)
+			throws NoSuchAlgorithmException, AplicacaoException {
 		if (senhaAtual == null || senhaAtual.trim().length() == 0) {
 			throw new AplicacaoException("Senha atual não confere");
 		}
@@ -712,9 +784,9 @@ public class CpBL {
 			throw new AplicacaoException("O usuário não está cadastrado.");
 
 		boolean podeTrocar = Boolean.FALSE;
-		
+
 		for (CpIdentidade cpIdentidade : listaIdentidades) {
-			if(cpIdentidade.getDscSenhaIdentidade().equals(hashAtual)) {
+			if (cpIdentidade.getDscSenhaIdentidade().equals(hashAtual)) {
 				podeTrocar = Boolean.TRUE;
 				break;
 			}
@@ -774,12 +846,12 @@ public class CpBL {
 				Date dt = dao().consultarDataEHoraDoServidor();
 				final String hashNova = GeraMessageDigest.executaHash(
 						senhaNova.getBytes(), "MD5");
-				
+
 				dao().iniciarTransacao();
 				CpIdentidade i = null;
 				for (CpIdentidade cpIdentidade : listaIdentidades) {
 					i = new CpIdentidade();
-					PropertyUtils.copyProperties(i,cpIdentidade);
+					PropertyUtils.copyProperties(i, cpIdentidade);
 					i.setIdIdentidade(null);
 					i.setDtCriacaoIdentidade(dt);
 					i.setDscSenhaIdentidade(hashNova);
@@ -787,7 +859,7 @@ public class CpBL {
 					i.setDscSenhaIdentidadeCriptoSinc(null);
 					dao().gravarComHistorico(i, cpIdentidade, dt, idCadastrante);
 				}
-				
+
 				dao().commitTransacao();
 				return null;
 			} catch (final Exception e) {
@@ -799,6 +871,25 @@ public class CpBL {
 			throw new AplicacaoException(
 					"Senha Atual não confere e/ou Senha nova diferente de confirmação");
 		}
+	}
+
+	private boolean autenticarViaBanco(String senhaAtual, final CpIdentidade id) throws NoSuchAlgorithmException {
+		String hashAtual = GeraMessageDigest.executaHash(senhaAtual.getBytes(), "MD5");
+		return id.getDscSenhaIdentidade().equals(hashAtual);
+	}
+	
+	private boolean autenticarViaLdap(String login, String senhaAtual) {
+		boolean podeTrocar;
+		try {
+			podeTrocar = IntegracaoLdapViaWebService.getInstancia().autenticarUsuario(login, senhaAtual);
+		} catch (Exception e) {
+			podeTrocar = false;
+		}
+		return podeTrocar;
+	}
+
+	private boolean autenticarViaLdap(String senhaAtual, final CpIdentidade id) {
+		return autenticarViaLdap(id.getNmLoginIdentidade(), senhaAtual);
 	}
 
 	public boolean podeAlterarSenha(String auxiliar1, String cpf1,
@@ -847,21 +938,14 @@ public class CpBL {
 						"Problema ao localizar a identidade dos auxiliares!");
 			}
 
-			String hashSenha1 = null;
-			String hashSenha2 = null;
-			hashSenha1 = GeraMessageDigest
-					.executaHash(senha1.getBytes(), "MD5");
-			hashSenha2 = GeraMessageDigest
-					.executaHash(senha2.getBytes(), "MD5");
-
 			if (pesAux1.getIdInicial().equals(pesAux2.getIdInicial())
 					|| pesAux1.getIdInicial().equals(pessoa.getIdInicial())
 					|| pesAux2.getIdInicial().equals(pessoa.getIdInicial())) {
 				throw new AplicacaoException("As pessoas devem ser diferentes!");
 			}
 			;
-			if (!cpIdAux1.getDscSenhaIdentidade().equals(hashSenha1)
-					|| !cpIdAux2.getDscSenhaIdentidade().equals(hashSenha2)) {
+			if (!autenticarViaBanco(senha1, cpIdAux1)
+					|| !autenticarViaBanco(senha2, cpIdAux2)) {
 				throw new AplicacaoException("As senhas não conferem!");
 			}
 
@@ -1017,8 +1101,10 @@ public class CpBL {
 		throw new AplicacaoException(message, 0, cause);
 	}
 
-	public void logAcesso(CpTipoAcessoEnum tipo, String principal, int iat, int exp, String auditIP) {
-		CpIdentidade identidade = dao().consultaIdentidadeCadastrante(principal, true);
+	public void logAcesso(CpTipoAcessoEnum tipo, String principal, int iat,
+			int exp, String auditIP) {
+		CpIdentidade identidade = dao().consultaIdentidadeCadastrante(
+				principal, true);
 		CpAcesso acesso = new CpAcesso();
 		acesso.setCpIdentidade(identidade);
 		acesso.setDtInicio(new Date(iat * 1000L));
@@ -1027,130 +1113,139 @@ public class CpBL {
 		acesso.setAuditIP(auditIP);
 		dao().gravar(acesso);
 	}
-	
-	public InputStream uploadLotacao(File file, CpOrgaoUsuario orgaoUsuario, String extensao) {
+
+	public InputStream uploadLotacao(File file, CpOrgaoUsuario orgaoUsuario,
+			String extensao) {
 		InputStream inputStream = null;
 		try {
 			Excel excel = new Excel();
 			inputStream = excel.uploadLotacao(file, orgaoUsuario, extensao);
 		} catch (Exception e) {
-			
+
 		}
 		return inputStream;
 	}
-	
-	public InputStream uploadFuncao(File file, CpOrgaoUsuario orgaoUsuario, String extensao) {
+
+	public InputStream uploadFuncao(File file, CpOrgaoUsuario orgaoUsuario,
+			String extensao) {
 		InputStream inputStream = null;
 		try {
 			Excel excel = new Excel();
 			inputStream = excel.uploadFuncao(file, orgaoUsuario, extensao);
 		} catch (Exception e) {
-			
+
 		}
 		return inputStream;
 	}
 
-	public InputStream uploadCargo(File file, CpOrgaoUsuario orgaoUsuario, String extensao) {
+	public InputStream uploadCargo(File file, CpOrgaoUsuario orgaoUsuario,
+			String extensao) {
 		InputStream inputStream = null;
 		try {
 			Excel excel = new Excel();
 			inputStream = excel.uploadCargo(file, orgaoUsuario, extensao);
 		} catch (Exception e) {
-			
+
 		}
 		return inputStream;
 	}
-	
-	public InputStream uploadPessoa(File file, CpOrgaoUsuario orgaoUsuario, String extensao, CpIdentidade i) {
+
+	public InputStream uploadPessoa(File file, CpOrgaoUsuario orgaoUsuario,
+			String extensao, CpIdentidade i) {
 		InputStream inputStream = null;
 		try {
 			Excel excel = new Excel();
 			inputStream = excel.uploadPessoa(file, orgaoUsuario, extensao, i);
 		} catch (Exception e) {
-			
+
 		}
 		return inputStream;
 	}
 
-	public String criarUsuario(final Long id, final Long idOrgaoUsu, final Long idCargo, final Long idFuncao, final Long idLotacao, final String nmPessoa, final String dtNascimento, 
-			final String cpf, final String email) throws Exception{
-		
-		if(idOrgaoUsu == null || idOrgaoUsu == 0)
+	public String criarUsuario(String cadastranteStr, final Long id,
+			final Long idOrgaoUsu, final Long idCargo, final Long idFuncao,
+			final Long idLotacao, final String nmPessoa,
+			final String dtNascimento, final String cpf, final String email)
+			throws Exception {
+
+		if (idOrgaoUsu == null || idOrgaoUsu == 0)
 			throw new AplicacaoException("Órgão não Localizado");
-		
-		if(idCargo == null || idCargo == 0)
+
+		if (idCargo == null || idCargo == 0)
 			throw new AplicacaoException("Cargo não Localizado");
-		
-		if(idLotacao == null || idLotacao == 0)
+
+		if (idLotacao == null || idLotacao == 0)
 			throw new AplicacaoException("Lotação não Localizado");
-		
-		if(nmPessoa == null || nmPessoa.trim() == "")
+
+		if (nmPessoa == null || nmPessoa.trim() == "")
 			throw new AplicacaoException("Nome não informado");
-		
-		if(cpf == null || cpf.trim() == "") 
+
+		if (cpf == null || cpf.trim() == "")
 			throw new AplicacaoException("CPF não informado");
-		
-		if(email == null || email.trim() == "") 
+
+		if (email == null || email.trim() == "")
 			throw new AplicacaoException("E-mail não informado");
-		
-		if(nmPessoa != null && !nmPessoa.matches("[a-zA-ZáâãéêíóôõúçÁÂÃÉÊÍÓÔÕÚÇ'' ]+")) 
+
+		if (nmPessoa != null
+				&& !nmPessoa.matches("[a-zA-ZáâãéêíóôõúçÁÂÃÉÊÍÓÔÕÚÇ'' ]+"))
 			throw new AplicacaoException("Nome com caracteres não permitidos");
-		
-		
+
 		DpPessoa pessoa = new DpPessoa();
-		
+
 		if (id == null) {
 			Date data = new Date(System.currentTimeMillis());
 			pessoa.setDataInicio(data);
 			pessoa.setMatricula(0L);
-			pessoa.setSituacaoFuncionalPessoa(SituacaoFuncionalEnum.APENAS_ATIVOS.getValor()[0]);
+			pessoa.setSituacaoFuncionalPessoa(SituacaoFuncionalEnum.APENAS_ATIVOS
+					.getValor()[0]);
 		} else {
 			pessoa = dao().consultar(id, DpPessoa.class, false);
 		}
-		
-		if(dtNascimento != null && !"".equals(dtNascimento)) {
+
+		if (dtNascimento != null && !"".equals(dtNascimento)) {
 			Date dtNasc = new Date();
 			dtNasc = SigaCalendar.converteStringEmData(dtNascimento);
-			
+
 			Calendar hj = Calendar.getInstance();
 			Calendar dtNasci = new GregorianCalendar();
 			dtNasci.setTime(dtNasc);
-			
-			if(hj.before(dtNasci)) {
+
+			if (hj.before(dtNasci)) {
 				throw new AplicacaoException("Data de nascimento inválida");
 			}
 			pessoa.setDataNascimento(dtNasc);
 		} else {
 			pessoa.setDataNascimento(null);
 		}
-		
+
 		pessoa.setNomePessoa(Texto.removerEspacosExtra(nmPessoa).trim());
 		pessoa.setCpfPessoa(Long.valueOf(cpf.replace("-", "").replace(".", "")));
-		pessoa.setEmailPessoa(Texto.removerEspacosExtra(email).trim().replace(" ","").toLowerCase());
-		
+		pessoa.setEmailPessoa(Texto.removerEspacosExtra(email).trim()
+				.replace(" ", "").toLowerCase());
+
 		CpOrgaoUsuario ou = new CpOrgaoUsuario();
 		DpCargo cargo = new DpCargo();
 		DpFuncaoConfianca funcao = new DpFuncaoConfianca();
 		DpLotacao lotacao = new DpLotacao();
-		
+
 		ou.setIdOrgaoUsu(idOrgaoUsu);
 		ou = CpDao.getInstance().consultarPorId(ou);
 		cargo.setId(idCargo);
 		lotacao.setId(idLotacao);
 		funcao.setIdFuncao(idFuncao);
-		
+
 		pessoa.setOrgaoUsuario(ou);
 		pessoa.setCargo(cargo);
 		pessoa.setLotacao(lotacao);
-		
-		if(idFuncao != null && idFuncao != 0) {
+
+		if (idFuncao != null && idFuncao != 0) {
 			pessoa.setFuncaoConfianca(funcao);
 		} else {
 			pessoa.setFuncaoConfianca(null);
 		}
 		pessoa.setSesbPessoa(ou.getSigla());
-		
-		//ÓRGÃO / CARGO / FUNÇÃO DE CONFIANÇA / LOTAÇÃO e CPF iguais.
+
+		// ÓRGÃO / CARGO / FUNÇÃO DE CONFIANÇA / LOTAÇÃO e CPF iguais.
 		DpPessoaDaoFiltro dpPessoa = new DpPessoaDaoFiltro();
 		dpPessoa.setIdOrgaoUsu(pessoa.getOrgaoUsuario().getId());
 		dpPessoa.setCargo(pessoa.getCargo());
@@ -1159,58 +1254,107 @@ public class CpBL {
 		dpPessoa.setCpf(pessoa.getCpfPessoa());
 		dpPessoa.setNome("");
 		dpPessoa.setId(id);
-		
+
 		dpPessoa.setBuscarFechadas(Boolean.FALSE);
 		Integer tamanho = dao().consultarQuantidade(dpPessoa);
-		
-		if(tamanho > 0) {
-			throw new AplicacaoException("Usuário já cadastrado com estes dados: Órgão, Cargo, Função, Unidade e CPF");
+
+		if (tamanho > 0) {
+			throw new AplicacaoException(
+					"Usuário já cadastrado com estes dados: Órgão, Cargo, Função, Unidade e CPF");
 		}
-		
+
 		try {
 			dao().iniciarTransacao();
 			dao().gravar(pessoa);
-			if(pessoa.getIdPessoaIni() == null && pessoa.getId() != null) {
+			if (pessoa.getIdPessoaIni() == null && pessoa.getId() != null) {
 				pessoa.setIdPessoaIni(pessoa.getId());
 				pessoa.setIdePessoa(pessoa.getId().toString());
 				pessoa.setMatricula(10000 + pessoa.getId());
 				pessoa.setIdePessoa(pessoa.getMatricula().toString());
 				dao().gravar(pessoa);
-				
-				List<CpIdentidade> lista = CpDao.getInstance().consultaIdentidadesPorCpf(cpf.replace(".", "").replace("-", ""));
+
+				List<CpIdentidade> lista = CpDao.getInstance()
+						.consultaIdentidadesPorCpf(
+								cpf.replace(".", "").replace("-", ""));
 				CpIdentidade usu = null;
-				if(lista.size() > 0) {
+				if (lista.size() > 0) {
 					CpIdentidade usuarioExiste = lista.get(0);
 					usu = new CpIdentidade();
 					usu.setCpTipoIdentidade(dao().consultar(1,
-										CpTipoIdentidade.class, false));
-					usu.setDscSenhaIdentidade(usuarioExiste.getDscSenhaIdentidade());
+							CpTipoIdentidade.class, false));
+					usu.setDscSenhaIdentidade(usuarioExiste
+							.getDscSenhaIdentidade());
 					usu.setDtCriacaoIdentidade(dao()
 							.consultarDataEHoraDoServidor());
 					usu.setCpOrgaoUsuario(ou);
 					usu.setHisDtIni(usu.getDtCriacaoIdentidade());
 					usu.setHisAtivo(1);
 				}
-				
-				if(usu != null) {
-					usu.setNmLoginIdentidade(pessoa.getSesbPessoa() + pessoa.getMatricula());
+
+				if (usu != null) {
+					usu.setNmLoginIdentidade(pessoa.getSesbPessoa()
+							+ pessoa.getMatricula());
 					usu.setDpPessoa(pessoa);
-					//dao().gravarComHistorico(usu, getIdentidadeCadastrante());
+					// dao().gravarComHistorico(usu,
+					// getIdentidadeCadastrante());
 				}
 			}
-			dao().commitTransacao();			
+			dao().commitTransacao();
 		} catch (final Exception e) {
 			dao().rollbackTransacao();
 			throw new AplicacaoException("Erro na gravação", 0, e);
 		}
-		
-		
-		
-		
-		return "Usuário cadastrado com sucesso: " + pessoa.getSesbPessoa() + pessoa.getMatricula();
-		
-		
-	}
-	
 
+		String[] senhaGerada = new String[1];
+
+		CpIdentidade idIdentidade;
+		try {
+			idIdentidade = dao().consultaIdentidadeCadastrante(cadastranteStr,
+					true);
+		} catch (Exception e1) {
+			idIdentidade = null;
+		}
+
+		senhaGerada[0] = GeraMessageDigest.geraSenha();
+		Cp.getInstance()
+				.getBL()
+				.criarIdentidade(
+						pessoa.getSesbPessoa() + pessoa.getMatricula(),
+						pessoa.getCpfFormatado(), idIdentidade, null,
+						senhaGerada, Boolean.FALSE);
+
+		return "Usuário cadastrado com sucesso: " + pessoa.getSesbPessoa()
+				+ pessoa.getMatricula();
+
+	}
+
+	public String inativarUsuario(final Long idUsuario) {
+		CpOrgaoUsuario ou = new CpOrgaoUsuario();
+		DpPessoa pessoa = dao().consultar(idUsuario, DpPessoa.class, false);
+		ou.setIdOrgaoUsu(pessoa.getOrgaoUsuario().getId());
+		ou = CpDao.getInstance().consultarPorId(ou);
+
+		pessoa = dao().consultar(idUsuario, DpPessoa.class, false);
+		// inativar
+		if (pessoa.getDataFimPessoa() == null
+				|| "".equals(pessoa.getDataFimPessoa())) {
+			Calendar calendar = new GregorianCalendar();
+			Date date = new Date();
+			calendar.setTime(date);
+			pessoa.setDataFimPessoa(calendar.getTime());
+
+		}
+
+		try {
+			dao().iniciarTransacao();
+			dao().gravar(pessoa);
+			dao().commitTransacao();
+		} catch (final Exception e) {
+			dao().rollbackTransacao();
+			throw new AplicacaoException("Erro na gravação", 0, e);
+		}
+
+		return "Usuário inativado com sucesso: " + pessoa.getSesbPessoa()
+				+ pessoa.getMatricula();
+	}
 }
